fixed webkit chat overflow bug and added dae's static IP

--- a/data/style.css
+++ b/data/style.css
@@ -56,6 +56,7 @@ input[type=checkbox] {
   flex: 1 1 auto;
   position: relative;
   overflow: hidden; 
+  height: 100%;
 }
 
 .messages {
